--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ form {
   display: flex;
   justify-content: center;
   align-items: center; /* Center the content vertically */
-  font-size: 40px;
+  font-size: 30px;
 }
 .weather-description {
   display: flex;
@@ -93,13 +93,26 @@ form {
   border: 1px solid #ccc;
   background-color: #f5f5f5;
 }
-.weekly-icons {
-  height: 80px !important;
-  width: 80px !important;
-}
+
 p {
   color: #f5f5f5;
   font-size: 20px;
+}
+
+.Footer-text {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.Footer-text h4 {
+  margin-left: 3px;
+}
+
+a {
+  margin-top: 20px;
+  text-decoration: none;
+  color: #d8d8d8;
+  font-size: 18px;
 }
 
 @keyframes App-logo-spin {
